TH-351 use image template

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/homepage-hero.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/homepage-hero.twig
@@ -15,6 +15,9 @@
   </div>
   <div class="homepage-hero__image">
     <div class="homepage-hero__image__background"></div>
-    <img src="{{img.src}}" alt="{{img.alt}}" />
+    {% include "@atoms/04-images/00-image/responsive-image.twig" with {
+      "img_src": img.src,
+      "img_alt": img.alt,
+    } %}
   </div>
 </div>
