--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/_homepage-hero.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/_homepage-hero.scss
@@ -113,6 +113,7 @@
     top: -10%;
     right: -10%;
     z-index: -10;
+    max-width: 950px;
 
     @include breakpoint($bp5) {
       z-index: auto;
