modify some base items

--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/01-links/link/_link.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/01-links/link/_link.scss
@@ -1,10 +1,11 @@
 @mixin link {
   color: $trust-aa;
-  
+
   &:active,
   &:hover,
   &:focus {
-    color: $trust-aa;
+    color: $growth-aa;
+    text-decoration: underline;
   }
 }
 
