--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/_menu-item.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/_menu-item.twig
@@ -31,7 +31,7 @@
       "link_modifiers": item_modifiers,
     } %}
     {% if item.below %}
-      <span class="expand-sub"></span>
+      <button class="expand-sub">Toggle Menu</button>
       {{ menus.menu_links(item.below, attributes, menu_level + 1, menu_class, menu_modifiers, menu_blockname, item_base_class, original_item_modifiers, item_blockname) }}
     {% endif %}
   {% endblock %}
