rename site header and modify some of the markup

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-header/_site-header.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-header/_site-header.scss
@@ -1,1 +1,17 @@
 //  Empty
+.header {
+  padding-top: rhythm(.5);
+}
+
+.header__container {
+  @include grid;
+  align-items: center;
+
+  .figure {
+    max-width: 250px;
+  }
+
+  .toggle-expand {
+    margin-left: auto;
+  }
+}
