--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/_00-main-menu.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/_00-main-menu.scss
@@ -19,6 +19,12 @@ $main-menu-medium: 43em;
     top: 134px;
     right: 0;
     width: 100%;
+
+    @include breakpoint($main-menu-medium) {
+      height: auto;
+      position: relative;
+      position: static;
+    }
   }
 }
 
@@ -26,11 +32,12 @@ $main-menu-medium: 43em;
 .main-menu {
   @include list-reset;
 
-  border-bottom: 1px solid;
+  border-bottom: 1px solid $trust-ltr;
   position: relative;
   z-index: 10;
 
   @include breakpoint($main-menu-medium) {
+    display: flex;
     border-bottom: none;
   }
 }
@@ -44,11 +51,11 @@ $main-menu-medium: 43em;
   border-bottom: none;
   height: 0;
   overflow: hidden;
-  background-color: $off-white;
+  background-color: rgba($trust-ltst, .35);
   width: 100%;
 
   @include breakpoint($main-menu-medium) {
-    background-color: $gray-light;
+    background-color: $white;
     display: none;
     height: auto;
     left: 0;
@@ -65,17 +72,14 @@ $main-menu-medium: 43em;
   &:hover {
     @include breakpoint($main-menu-medium) {
       opacity: 1;
-      background-color: $black;
       transition: all 0.2s;
 
       .main-menu__link--sub {
-        color: $gray-light;
 
         &.active,
         &:active,
         &:hover {
-          color: $white;
-          background-color: $black;
+
         }
       }
     }
