--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-footer/site-footer.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-footer/site-footer.twig
@@ -5,7 +5,7 @@
     </div>
     <div class="footer__info">
       {% include "@atoms/04-images/00-image/figure.twig" with {
-        img_src: "../../images/TowerHealth_H.svg",
+        img_src: "../../images/TowerHealth_V.svg",
         img_alt: "Tower Health Logo",
         img_url: logo_link_url|default('/'),
       } %}
