TH-351 border adjustments

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/_homepage-hero.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/_homepage-hero.scss
@@ -37,6 +37,7 @@
     margin-top: 55%;
 
     @include breakpoint($bp2) {
+      border: 4px solid $trust-ltr;
       margin-top: 45%;
       width: 75%;
       border-width: 6px;
