--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/homepage-hero.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/homepage-hero.twig
@@ -18,7 +18,7 @@
       } %}
     {% endif %}
     <div class="homepage-hero__content__form">
-      <label for="provider-search">Search Providers</label>
+      <label for="provider-search">Find a Provider</label>
       <input id="provider-search" placeholder="Search by Name, Specialty, or Condition">
       <button class="button button--primary" type="submit">Search Providers</button>
     </div>
