--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/homepage-hero.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/homepage-hero.twig
@@ -17,11 +17,11 @@
         "heading_base_class": "subtitle",
       } %}
     {% endif %}
-    <div class="homepage-hero__content__form">
+    <form class="homepage-hero__content__form">
       <label for="provider-search">Find a Provider</label>
-      <input id="provider-search" placeholder="Search by Name, Specialty, or Condition">
+      <input type="text" id="provider-search" placeholder="Search by Name, Specialty, or Condition">
       <button class="button button--primary" type="submit">Search Providers</button>
-    </div>
+    </form>
   </div>
   <div class="homepage-hero__image">
     <div class="homepage-hero__image__background"></div>
