--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/05-forms/_forms.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/05-forms/_forms.scss
@@ -1,28 +1,39 @@
 // @copyright Copyright (c) 2019 Palantir.net
 
 %input {
-  border-radius: 0;
+  display: block;
+  border-radius: 3px;
   max-width: 100%;
   width: 100%;
-  height: 4em;
-  padding: 1.25em .25em;
-  border: 1px solid $gray-light;
-  font-size: 16px;
-  
+  height: 2.5em;
+  padding: 0 1em;
+  border: 1px solid $primary-dark;
+  font-size: 1.25em;
+  margin-bottom: 1em;
+
+  @include breakpoint($bp3) {
+    height: 3em;
+  }
+
   &:active,
   &:hover,
   &:focus {
     border-color: $trust-aa;
+  }
+
+  &::placeholder {
+    color: $gray-lighter;
+    font-weight: 300;
   }
 }
 
 %label,
 label {
   @include adjust-font-size-to($label);
-  font-weight: 400;
-  color: $trust-aa;
+  font-weight: 300;
+  color: $primary-dark;
   display: block;
-  margin-bottom: rhythm(.25);
+  margin-bottom: 0;
 }
 
 input[type="text"],
