TH-351 top offset for image background

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/_homepage-hero.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/_homepage-hero.scss
@@ -203,6 +203,7 @@
       background-color: $growth;
       z-index: -5;
       margin-left: -20px;
+      margin-top: -10px;
       height: 100%;
       width: 100%;
     }
