TH-351 adjust background image molecule

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/image-background/_image-background.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/image-background/_image-background.scss
@@ -1,6 +1,9 @@
 .image-background {
-  width: 100%;
-  
+  display: inline-block;
+  position: relative;
+  padding-left: 20px;
+  padding-top: 10px;
+
   img {
     border-radius: 50%;
   }
