--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/_homepage-hero.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/_homepage-hero.scss
@@ -6,27 +6,6 @@
     padding-top: 0;
   }
 
-  .homepage-hero__outline {
-    display: none;
-    border: 6px solid $trust-ltr;
-    border-radius: 10px;
-    width: 55%;
-    margin: 0 auto;
-    position: absolute;
-    top: 100px;
-    left: 2%;
-    bottom: 0;
-    z-index: -5;
-
-    @include breakpoint($bp3) {
-      display: block;
-      border-width: 8px;
-      width: 85%;
-      top: 0;
-      left: 7.5%;
-    }
-  }
-
   .homepage-hero__content {
     background-color: $white;
     border: 4px solid $trust-ltr;
@@ -48,7 +27,7 @@
       background-color: transparent;
       width: 90%;
       margin: 0 auto;
-      margin-top: 10%;
+      margin-top: 4em;
       padding: 5em 0;
       padding-right: 40%;
     }
@@ -143,6 +122,24 @@
     .homepage-hero__content__form {
       @include breakpoint($bp3) {
         margin-left: 4.5em;
+      }
+    }
+
+    &::before {
+      content: ' ';
+      display: none;
+
+      @include breakpoint($bp3) {
+        display: block;
+        border: 6px solid $trust-ltr;
+        border-radius: 10px;
+        margin: 0 auto;
+        width: 85%;
+        position: absolute;
+        top: 0;
+        left: 6%;
+        bottom: 0;
+        z-index: -5;
       }
     }
   }
