--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/_homepage-hero.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/_homepage-hero.scss
@@ -150,6 +150,7 @@
     top: -1%;
     right: -20%;
     z-index: -10;
+    overflow: hidden;
 
     @include breakpoint("500px") {
       max-width: 550px;
