--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/homepage-hero.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/homepage-hero.twig
@@ -27,6 +27,7 @@
       {% include "@molecules/image-background/image-background.twig" with {
         "img.src": img.src,
         "img.src": img.alt,
+        "classes": classes,
       } %}
     </div>
   </div>
