--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/image-background/image-background.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/image-background/image-background.twig
@@ -1,4 +1,4 @@
-<div class="image-background">
+<div class="image-background {{ classes }}">
   {% include "@atoms/04-images/00-image/responsive-image.twig" with {
     "img_src": img.src,
     "img_alt": img.alt,
