TH-353 WIP building out cta component

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/image-background/_image-background.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/image-background/_image-background.scss
@@ -18,24 +18,28 @@
   }
 
   &.growth {
-
     .image::before {
       background-color: $growth;
     }
   }
 
   &.trust {
-
     .image::before {
       background-color: $trust;
     }
   }
 
   &.top-left {
-
     .image::before {
       margin-left: -20px;
       margin-top: -10px;
+    }
+  }
+
+  &.bottom-left {
+    .image::before {
+      margin-left: -20px;
+      margin-top: 10px;
     }
   }
 }
