--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-banner/_cta-banner.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-banner/_cta-banner.scss
@@ -1,35 +1,75 @@
 .cta-banner {
   position: relative;
+  width: 100%;
+
+  @include breakpoint($bp3) {
+    margin-top: 300px;
+  }
 
   .cta-banner__image {
-    max-width: 500px;
+    max-width: 400px;
+    position: absolute;
+    left: -60px;
     z-index: -10;
-    overflow: hidden;
+
+    @include breakpoint("600px") {
+      max-width: 500px;
+    }
+
+    @include breakpoint($bp3) {
+      top: -35%;
+      left: -5%;
+      z-index: 10;
+    }
+
+    @include breakpoint("1000px") {
+      max-width: 600px;
+    }
+
+    @include breakpoint("1300px") {
+      max-width: 700px;
+      top: -45%;
+      left: -5%;
+    }
+
+    @include breakpoint("1350px") {
+      max-width: 800px;
+      top: -65%;
+    }
+
+    @include breakpoint("1500px") {
+      max-width: 900px;
+      top: -90%;
+      left: -7%;
+    }
   }
 
   .cta-banner__content {
     background-color: $white;
     border: 4px solid $trust-ltr;
     border-radius: 5px;
-    width: 90%;
-    padding: 2em;
-    margin-top: 55%;
+    width: 60%;
+    padding: 3em;
+    margin-top: 65%;
+    position: absolute;
+    right: 0;
 
     @include breakpoint($bp2) {
       border: 4px solid $trust-ltr;
-      margin-top: 45%;
-      width: 75%;
+      width: 65%;
+      margin-top: 55%;
       border-width: 6px;
     }
 
     @include breakpoint($bp3) {
+      position: static;
+      padding: 6em 4em;
       border: none;
       background-color: transparent;
-      width: 90%;
-      margin: 0 auto;
-      padding: 5em 0;
-      padding-right: 40%;
+      width: 100%;
+      margin: 0;
     }
+
     &::before {
       content: ' ';
       display: none;
@@ -38,12 +78,43 @@
         display: block;
         border: 6px solid $trust-ltr;
         border-radius: 10px;
-        width: 85%;
+        width: 90%;
         position: absolute;
         top: 0;
-        left: 6%;
+        left: 10%;
         bottom: 0;
         z-index: -5;
+      }
+
+      @include breakpoint("1300px") {
+        width: 100%;
+        left: 0;
+      }
+    }
+
+    p {
+      color: $primary-dark;
+      text-transform: uppercase;
+      font-size: 2em;
+      margin: 0;
+      line-height: 1em;
+      font-weight: 600;
+
+      @include breakpoint("600px") {
+        font-size: 3em;
+      }
+
+      @include breakpoint($bp3) {
+        font-size: 3em;
+        margin-left: 60%;
+      }
+
+      @include breakpoint("950") {
+        margin-left: 55%;
+      }
+
+      @include breakpoint("1350px") {
+        margin-left: 60%;
       }
     }
   }
