--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-banner/cta-banner.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-banner/cta-banner.twig
@@ -8,7 +8,7 @@
       } %}
     </div>
     <div class="cta-banner__content">
-      Need Help? We're Here.
+      <p>Need Help? We're Here.</p>
     </div>
   </div>
 </div>
