TH-353 add button

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-banner/_cta-banner.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-banner/_cta-banner.scss
@@ -92,6 +92,16 @@
       }
     }
 
+    button {
+      position: absolute;
+      top: -20px;
+      right: 50px;
+
+      @include breakpoint($bp3) {
+        right: 100px;
+      }
+    }
+
     p {
       color: $primary-dark;
       text-transform: uppercase;
