--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-banner/cta-banner.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-banner/cta-banner.twig
@@ -8,6 +8,7 @@
       } %}
     </div>
     <div class="cta-banner__content">
+      <button class="button button--alt" type="submit">Chat with Us</button>
       <p>Need Help? We're Here.</p>
     </div>
   </div>
