TH-353 add top margin

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-banner/_cta-banner.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-banner/_cta-banner.scss
@@ -3,6 +3,14 @@
   width: 100%;
 
   @include breakpoint($bp3) {
+    margin-top: 155px;
+  }
+
+  @include breakpoint("1350px") {
+    margin-top: 220px;
+  }
+
+  @include breakpoint("1500px") {
     margin-top: 300px;
   }
 
