add a new breakpoint

--- a/docroot/themes/custom/tower_health/components/_patterns/00-base/global/base/_01-init.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/00-base/global/base/_01-init.scss
@@ -86,6 +86,7 @@ $font-monospace: $mono;
 // =============================================================================
 
 // Breakpoint Variables
+$bp0: 350px;
 $bp1: 400px;
 $bp2: 600px;
 $bp3: 900px;
