--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/05-forms/_forms.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/05-forms/_forms.scss
@@ -5,14 +5,14 @@
   border-radius: 3px;
   max-width: 100%;
   width: 100%;
-  height: 2.5em;
+  height: 60px;
   padding: 0 1em;
   border: 1px solid $primary-dark;
-  font-size: 1.25em;
+  font-size: 16px;
   margin-bottom: 1em;
 
   @include breakpoint($bp3) {
-    height: 3em;
+    height: 70px;
   }
 
   &:active,
