--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/_homepage-hero.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/_homepage-hero.scss
@@ -3,92 +3,122 @@
   padding-top: 100px;
   width: 100%;
 
+  @include breakpoint($bp2) {
+    padding: 100px 2em 0;
+  }
+
   @include breakpoint($bp3) {
-    padding-top: 0;
-    margin-top: 4em;
+    padding: 0 2em;
+    margin: 5em auto 0;
+    max-width: 1600px;
+  }
+
+  @include breakpoint(1050px) {
+    margin-top: 6em;
   }
 
   .homepage-hero__content {
     background-color: $white;
-    border: 4px solid $trust-ltr;
-    border-radius: 5px;
-    width: 90%;
+    border-top: 4px solid $trust-ltr;
+    border-right: 4px solid $trust-ltr;
+    border-bottom: 4px solid $trust-ltr;
+    border-radius: 0 5px 5px 0;
+    width: 96%;
     padding: 2em;
-    margin-top: 55%;
+    margin-top: 40%;
+    box-shadow: 0px 2px 8px rgba($black, 0.15);
+
+    @include breakpoint($bp0) {
+      width: 90%;
+      margin-top: 45%;
+    }
 
     @include breakpoint($bp2) {
       border: 4px solid $trust-ltr;
-      margin-top: 45%;
-      width: 75%;
-      border-width: 6px;
+      border-radius: 5px;
+      width: 90%;
     }
 
     @include breakpoint($bp3) {
       border: none;
       background-color: transparent;
-      width: 90%;
-      margin: 0 auto;
-      padding: 5em 0;
-      padding-right: 40%;
-    }
-
-    @include breakpoint("1000px") {
+      margin-top: 0;
       padding-right: 45%;
+      box-shadow: none;
     }
 
-    @include breakpoint("1150px") {
-      padding-right: 50%;
-    }
-
-    @include breakpoint("1250px") {
-      padding-right: 52%;
-    }
-
-    @include breakpoint("1500px") {
-      padding-right: 50%;
+    @include breakpoint($bp4) {
+      padding: 3em 50% 3em 2em;;
     }
 
     h1 {
+      @extend %track-in;
       margin: 0;
+
+      @include breakpoint($bp3) {
+        margin-left: -3.25rem;
+      }
 
       span {
         color: $primary-dark;
         display: block;
         text-transform: uppercase;
-        font-size: 0.9em;
-        line-height: 1em;
+        font-size: 0.7em;
+        line-height: 1.05em;
         font-weight: 500;
+        word-wrap: break-word;
+
+        @include breakpoint($bp0) {
+          font-size: .78em;
+        }
 
         @include breakpoint("425px") {
-          font-size: 1.25em;
+          font-size: .975em;
         }
 
         @include breakpoint("500px") {
-          font-size: 1.5em;
+          font-size: 1.18em;
         }
 
         @include breakpoint($bp2) {
-          font-size: 1.25em;
+          font-size: 1.125em;
+          line-height: 1em;
         }
 
         @include breakpoint("675px") {
-          font-size: 1.5em;
+          font-size: 1.3em;
         }
 
         @include breakpoint("775px") {
-          font-size: 1.75em;
+          font-size: 1.55em;
         }
 
         @include breakpoint($bp3) {
-          font-size: 1.25em;
+          font-size: 1em;
+        }
+
+        @include breakpoint("1000px") {
+          font-size: 1.12em;
+        }
+
+        @include breakpoint("1100px") {
+          font-size: 1.225em;
+        }
+
+        @include breakpoint($bp4) {
+          font-size: 1.21em;
         }
 
         @include breakpoint("1300px") {
-          font-size: 1.5em;
+          font-size: 1.3em;
+        }
+
+        @include breakpoint("1400px") {
+          font-size: 1.4em;
         }
 
         @include breakpoint($bp5) {
-          font-size: 1.75em;
+          font-size: 1.6em;
         }
       }
 
@@ -102,26 +132,37 @@
       }
     }
 
-    .subtitle {
+    .hero_subtitle {
+      @extend %track-in;
       color: $primary-dark;
-      font-weight: 600;
+      font-weight: 500;
       margin-top: 0.5em;
-      margin-bottom: 1em;
+      margin-bottom: 1.5em;
       font-size: 1.25em;
-      letter-spacing: 0.05em;
+
+      @include breakpoint($bp3) {
+        margin-left: -3rem;
+      }
 
       @include breakpoint("1300px") {
         font-size: 1.5em;
       }
 
       @include breakpoint($bp5) {
-        font-size: 1.75em;
+        font-size: 1.5em;
       }
     }
 
     .homepage-hero__content__form {
-      @include breakpoint($bp3) {
-        margin-left: 4.5em;
+
+      @include breakpoint($bp3, 1400px) {
+        input[type="text"] {
+          height: 60px;
+        }
+
+        button {
+          padding: 1em 1.5em;
+        }
       }
     }
 
@@ -131,13 +172,13 @@
 
       @include breakpoint($bp3) {
         display: block;
-        border: 6px solid $trust-ltr;
+        border: 5px solid $trust-ltst;
         border-radius: 10px;
         margin: 0 auto;
-        width: 85%;
         position: absolute;
         top: 0;
-        left: 6%;
+        left: 2em;
+        right: 2em;
         bottom: 0;
         z-index: -5;
       }
@@ -145,54 +186,50 @@
   }
 
   .homepage-hero__image {
-    max-width: 500px;
+    width: 100%;
     position: absolute;
-    top: -1%;
-    right: -20%;
+    top: 0;
+    right: 0;
     z-index: -10;
     overflow: hidden;
 
-    @include breakpoint("500px") {
-      max-width: 550px;
+    .image-background {
+      position: relative;
+      width: 110%;
+      right: -10%;
     }
 
     @include breakpoint($bp2) {
-      max-width: 600px;
-    }
-
-    @include breakpoint("700px") {
-      max-width: 700px;
-    }
-
-    @include breakpoint("700px") {
-      max-width: 800px;
+      width: 90%;
     }
 
     @include breakpoint($bp3) {
       z-index: auto;
-      top: -10%;
-      right: -10%;
-      max-width: 500px;
+      right: 0;
+      left: 50%;
+      top: -5em;
+      width: auto;
+
+      .image-background {
+        position: relative;
+        width: 135%;
+        max-width: 1000px;
+        left: 0;
+        right: auto;
+      }
     }
 
-    @include breakpoint("1000px") {
-      max-width: 600px;
+    @include breakpoint(1050px) {
+      top: -6em;
     }
 
-    @include breakpoint("1150px") {
-      max-width: 700px;
-    }
-
-    @include breakpoint("1250px") {
-      max-width: 800px;
-    }
-
-    @include breakpoint("1400px") {
-      max-width: 900px;
+    @include breakpoint($bp4) {
+      left: 45%;
     }
 
     @include breakpoint($bp5) {
-      max-width: 950px;
+      top: -8em;
+      right: calc(( 100vw - 1600px ) / 2 * -1 );
     }
   }
 }
